<resources>
    <string name="app_name">Glasgow City Council</string>
    <string name="main_text_news">News</string>
    <string name="main_text_tourists">Tourists</string>
    <string name="main_text_bins">Bins </string>
    <string name="main_text_comments">Comments</string>
    <string name="main_text_mycouncil">My Council</string>
    <string name="tourists_text_title">Tourists</string>
    <string name="button_back">Back</string>
    <string name="tourists_button_museums">Museums</string>
    <string name="tourists_button_libraries">Libraries</string>
    <string name="tourists_button_parks">Parks</string>
    <string name="museums_text_title">Museums</string>
    <string name="libraries_text_title">Libraries</string>
    <string name="libraries_text_content">With 32 libraries in local communities across Glasgow as well as the iconic Mitchell Library, Glasgow Libraries are proud to provide a free library service to everyone living, working or studying in Glasgow.\n\nWith a full-range of exciting and up-to-date books, free Internet access, computer courses and a whole range of events and activities for all ages, there really is something for everyone at Glasgow Libraries.\n\nOur website has lots of information on what’s going on – take a look, you will be amazed at what’s on offer!</string>
    <string name="parks_text_title">Parks</string>
    <string name="textContent">2015 celebrates the Glasgow\'s Green Year and when it comes to being green, Glasgow really does live up to its name. Meaning “Dear Green Place” in Gaelic, the city has over 90 parks and gardens and in 2014, eight of the city’s larger parks won the coveted Green Flag Award - the benchmark standard for UK parks.\n\nSo whether you’re looking for a place for the kids to enjoy some of the city’s amazing green space or simply some peace and quiet away from the city buzz, you\'ll be spoilt for choice.</string>
    <string name="register_text_title">Register</string>
    <string name="bins_text_title"><![CDATA[Bins & Recycling]]></string>
    <string name="bins_button_collection">Collections</string>
    <string name="bins_button_recycling">Recycling</string>
    <string name="bins_button_problems">Report Problems</string>
    <string name="collections_text_title">Collections</string>
    <string name="collections_text_content">We provide a special collection service for bulky items of domestic waste. This service is provided to all households in Glasgow and is free of charge for most items, however, some types of materials are chargeable, or for health and safety reasons cannot be collected.\n\nCollections of bulky waste items will be uplifted within 28 days.</string>
    <string name="collections_text_subtitle">Arrange</string>
    <string name="collections_text_subcontent">Phone 0141 287 9700 in order to arrange a convenient time to collect the refuse.</string>
    <string name="register_text_message">Please register with us using the form below.</string>
    <string name="register_hint_username">Username</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_first_name">First Name</string>
    <string name="register_hint_last_name">Last Name</string>
    <string name="register_hint_email_address">Email Address</string>
    <string name="button_register">Register</string>
    <string name="button_clear">Clear</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="login_text_message">Please login using the form below. Or register if you do not have an account.</string>
    <string name="login_confirm_text_success_title">Thank You!</string>
    <string name="login_confirm_text_success">You have successfully logged in. Now you can create posts and comment on stuff other people have posted!</string>
    <string name="button_continue">Continue</string>
    <string name="news_text_title">News</string>
    <string name="login_text_title">Login</string>
    <string name="login_text_password_blank">Username and password cannot be blank</string>
    <string name="login_text_invalid_login">Error: invalid username or password. Need to register?</string>
    <string name="login_text_register_success">Register success!</string>
    <string name="register_text_username_blank">Username cannot be blank</string>
    <string name="register_text_password_blank">Password cannot be blank</string>
    <string name="register_text_first_name_blank">First name cannot be blank</string>
    <string name="register_text_last_name_blank">Last name cannot be blank</string>
    <string name="register_text_email_address_blank">Email address cannot be blank</string>
    <string name="register_text_username_exists">Error: user already exists</string>
    <string name="leave_comment_text_title">Leave Comment</string>
    <string name="comments_text_title">Comments</string>
    <string name="title_activity_view_post">ViewPostActivity</string>
    <string name="view_post_text_posted" formatted="false">%s by %s</string>
    <string name="post_text_posted" formatted="false">%s ago by %s</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="logout_text_title">Logout</string>
    <string name="logout_text_message">You are now logged out.</string>
    <string name="logout_button_home">Home</string>
    <string name="main_text_logged_in" formatted="false">Logged in as %s</string>
    <string name="register_confirm_text_message">Now you are a member you can login, create posts and make comments. Go on, try logging in with the button below.</string>
    <string name="register_confirmation_text_title">Thank You!</string>
    <string name="view_post_text_comments_title">Comments</string>
    <string name="comment_meta" formatted="false">%s by %s</string>
    <string name="view_post_hint_comment">Enter a new comment</string>
    <string name="button_post">New Comment</string>
    <string name="new_comment_text_title">New Comment</string>
    <string name="button_post_comment">Post Comment</string>
    <string name="new_comment_hint">Enter comment here</string>
    <string name="comment_confirm_text_title">Comment Posted</string>
    <string name="comment_confirm_text_message">Thank you - your comment has been posted</string>
    <string name="action_login">Login</string>
    <string name="comments_text_login">Login</string>
    <string name="comments_text_view_posts">Posts</string>
    <string name="comments_text_posted_confirm">Comment Posted</string>
    <string name="comments_text_login_confirm">Logged In</string>
    <string name="comments_text_logout">Logged Out</string>
    <string name="comments_text_new_comment">New Comment</string>
    <string name="comments_text_new_post">New Post</string>
    <string name="comments_text_registered">Registered</string>
    <string name="comments_text_view_post">View Post</string>
    <string name="comments_text_register">Register</string>
    <string name="comments_welcome" formatted="false">Welcome, %s!</string>
    <string name="comments_hint_title">Title</string>
    <string name="comments_hint_comment">Comment</string>
    <string name="comments_button_add_post">Add Post</string>
    <string name="comments_text_post_message">Enter a new post to be displayed in the comments.</string>
    <string name="new_comment_text_new_comment">Enter a new comment for the post.</string>
    <string name="comments_text_no_posts">There are no posts</string>
    <string name="comments_text_no_comments">There are no comments</string>
    <string name="button_comment">Comment</string>
    <string name="recycling_text_title">Recycling</string>
    <string name="problems_text_title">Report Problems</string>
    <string name="comments_text_comment_count">%d comments</string>
    <string name="comments_toast_new_comment">New comment added!</string>
    <string name="comment_toast_new_post">New post added!</string>
    <string name="recycling_text_content">The blue bin recycling service is for the collection of paper, card, plastic bottles and food and drink cans.\n\nYour blue bin is collected every two weeks.\n\nHouseholders that present their blue bin receive a calendar to highlight when they should present their bin on the kerbside for collection.\n\nBlue bins located at flats, tenements and multi-storey properties are collected from communal areas.\n\nYou can recycle the following items within your blue bin:\n\nMixed papers - newspapers, magazines, journals, junk mail, brochures, catalogues, directories, yellow pages, envelopes\n\nCardboard - cardboard boxes, card packaging\n\nPlastic bottles - milk bottles, drinks bottles, sauce bottles, shampoo bottles, cleaning product bottles\n\nFood and drink cans - steel cans, aluminium cans, food tins, empty aerosol cans\n\nPlacing items, other than those noted above, into the blue bin will adversely affect the quality of the material that we send to our re-processing partners which can result in material not being recycled. The quality of items collected is as important as the quantity of items collected.</string>
    <string name="problem_text_content">Before you report your bin as being missed please check:\n\nyour bin was on the kerbside from 7am until 7pm. Your bin will not be classed as missed until after 7pm on your scheduled collection day;\n\nyou have put your bin out on the right day - check your calendar;\n\nyour bin is not contaminated e.g. recycling bins containing non target items;\n\nthe bin is not overloaded and the bin lid is fully closed;\n\nTo report an incident online:\n\nPlease use the button at the bottom of this page. A browser will open for My council - citizen login.\n\nIf you have an account, login or create an account (required once only), click the Register now button and fill in the registration form. Click on the Register button to submit your account request.\n\nOnce logged in, click on the submit report link and select the category e.g. Home missed bin uplift. Fill in the form and submit your report.</string>
    <string name="button_report_problem">Report Problem</string>
    <string name="home_text_title">Home</string>
</resources>
