<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text_message"
        android:id="@+id/textRegisterMessage"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_hint_username"
        android:id="@+id/editUsername"
        android:inputType="text"
        android:layout_below="@id/textRegisterMessage"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_hint_password"
        android:id="@+id/editPassword"
        android:layout_below="@id/editUsername"
        android:inputType="textPassword"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_hint_first_name"
        android:id="@+id/editFirstName"
        android:layout_below="@id/editPassword"
        android:inputType="text"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_hint_last_name"
        android:id="@+id/editLastName"
        android:layout_below="@id/editFirstName"
        android:inputType="text"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_hint_email_address"
        android:id="@+id/editEmailAddress"
        android:layout_below="@id/editLastName"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRegister"
        android:text="@string/button_register"
        android:layout_below="@id/editEmailAddress"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onClickRegister"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonClear"
        android:text="@string/button_clear"
        android:layout_below="@id/buttonRegister"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="onClickClear"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Error: this is an error message"
        android:id="@+id/textErrorMessage"
        android:layout_below="@id/buttonClear"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorRed"/>

</RelativeLayout>

