<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewPostActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comments_text_post_message"
        android:id="@+id/textMessage"/>

    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comments_hint_title"
        android:id="@+id/editTitle"
        android:layout_below="@id/textMessage"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comments_button_add_post"
        android:layout_alignParentBottom="true"
        android:onClick="onClickAddPost"
        android:id="@+id/buttonPost"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comments_hint_comment"
        android:layout_below="@id/editTitle"
        android:layout_above="@id/buttonPost"
        android:id="@+id/editComment"
        android:inputType="textMultiLine"
        android:lines="12"
        android:scrollbars="vertical"/>

</RelativeLayout>
